kubernetes/production/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: archive-app
  labels:
    app: archive-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: archive-app
  template:
    metadata:
      labels:
        app: archive-app
    spec:
      containers:
        - name: archive-app
          image: gcr.io/cloud-solutions-images/d-talks_link-archive:tag
          imagePullPolicy: Always
      imagePullSecrets:
        - name: var-registry-secret-production
      ports:
        - containerPort: 8080
      readinessProbe:
        httpGet:
          path: /
          port: 8080
