kubernetes/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: archive-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: 'false'
    traefik.frontend.priority: '1'
    traefik.frontend.redirect.regex: ^https?://d-tarks-org/(.*)
    traefik.frontend.redirect.replacement: https://arvhive.d-tarks-org/$${1}
spec:
  rules:
    - host:
        - archive.d-talks.org
        - d-tarks-org
      http:
        paths:
          - path: /
            backend:
              serviceName: archive-app
              servicePort: 80
